--- a/example.ini
+++ b/example.ini
@@ -1,4 +1,5 @@
 [istanza1]
+gpio0=no
 gpio1=yes
 gpio2=yes
 gpio3=yes
@@ -25,7 +26,7 @@ gpio23=no
 gpio24=no
 gpio25=no
 gpio26=no
-
+gpio27=no
 
 [test2]
 gpio1=no
