--- a/example.ini
+++ b/example.ini
@@ -29,6 +29,7 @@ gpio26=no
 gpio27=no
 
 [test2]
+gpio0=no
 gpio1=no
 gpio2=no
 gpio3=no
@@ -55,9 +56,11 @@ gpio23=no
 gpio24=no
 gpio25=no
 gpio26=no
+gpio27=no
 
 
 [test3]
+gpio0=no
 gpio1=no
 gpio2=no
 gpio3=no
@@ -84,10 +87,12 @@ gpio23=yes
 gpio24=no
 gpio25=no
 gpio26=no
+gpio27=no
 
 
 
 [test4]
+gpio0=no
 gpio1=no
 gpio2=no
 gpio3=no
@@ -114,3 +119,4 @@ gpio23=no
 gpio24=yes
 gpio25=yes
 gpio26=yes
+gpio27=no
